[package]
name = "kustomize-envcheck"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
tokio = { version = "1.40", features = ["full"] }
anyhow = "1.0"
k8s-openapi = { version = "0.23", features = ["v1_31"] }
regex = "1.11"
serde_json = "1.0"
colored = "2.1"
